ingress/tls-out/ingress-gitlab.yaml
---
# Source: gitlab/charts/gitlab/charts/webservice/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-webservice-default
  namespace: gitlab
  labels:
    app: webservice
    chart: webservice-5.2.1
    release: gitlab
    heritage: Helm
    gitlab.com/webservice-name: default
    
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.provider: external-nginx
    
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: gitlab.gnappv3.dev.gasneiva.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-webservice-default
                port:
                  number: 8181
          - path: /admin/sidekiq/
            pathType: Prefix
            backend:
              service:
                name: gitlab-webservice-default
                port:
                  number: 8080
  #tls:
  #  - hosts:
  #    - gitlab.gnappv2.dev.gasneiva.com
  #    secretName: gitlab-wildcard-tls
