ingress/tls-out/ingress-monitor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.provider: external-nginx
  name: monitor
  namespace: monitoring
spec:
  rules:
    - host: prometheus.gnappv3.dev.gasneiva.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-kube-prometheus-prometheus
              port: 
                number: 9090
    - host: grafana.gnappv3.dev.gasneiva.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port: 
                number: 80
    - host: alerts.gnappv3.dev.gasneiva.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-alertmanager
              port: 
                number: 80
