ingress/tls-out/ingress-registry.yaml
---
# Source: gitlab/charts/registry/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-registry
  namespace: gitlab
  labels:
    app: registry
    chart: registry-0.7.0
    release: gitlab
    heritage: Helm
    
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.provider: external-nginx
    
spec:
  rules:
    - host: registry.gnappv3.dev.gasneiva.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-registry
                port:
                  number: 5000
  #tls:
  #  - hosts:
  #    - registry.gnappv2.dev.gasneiva.com
  #    secretName: gitlab-wildcard-tls
